--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "ethereum-inbox",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "solc": "^0.4.24"
+  }
 }
