--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "ethereum-inbox",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "license": "MIT",
   "dependencies": {
-    "solc": "^0.4.24"
+    "ganache-cli": "^6.1.6",
+    "mocha": "^5.2.0",
+    "solc": "^0.4.24",
+    "web3": "1.0.0-beta.26"
   },
   "devDependencies": {
     "eslint": "^5.2.0",
